objects/delphiDemo__ProbabilityMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store the Max and Min probability of the opportunity.</description>
    <fields>
        <fullName>delphiDemo__Max_Probability__c</fullName>
        <description>Store the max probability of the opportunity.</description>
        <inlineHelpText>Store the max probability of the opportunity.</inlineHelpText>
        <label>Max Probability</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Min_Probability__c</fullName>
        <description>Store the min probability of the opportunity.</description>
        <inlineHelpText>Store the min probability of the opportunity.</inlineHelpText>
        <label>Min Probability</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Probability_Mean__c</fullName>
        <description>Capture the mean of the probability.</description>
        <label>Probability Mean</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Probability_SD__c</fullName>
        <label>Probability SD</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Probability Mapping</label>
</CustomObject>